# yuzzu

./: .gitignore  README.md  pyproject.toml
data/: curve.csv
scripts/: example.py
src/yuzzu/: bond.py  curve.py  report.py
tests/: test_bond.py  test_curve.py  test_report.py
