[project]
name = "yuzzu"
version = "0.1.0"
description = "Simple bond pricing package for the Yuzzu case study"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

